New Filters and bug fixes

--- a/template/createWork.html
+++ b/template/createWork.html
@@ -9,11 +9,11 @@
             <p>Category :
             	<select name="category">
 				  <option value="workexperience">Work Experience</option>
-				  <option value="personalprojects">Personal Projects</option>
+				  <option value="skills">Programming Skills</option>
+				  <option value="personalprojects">Applications Developed</option>
 				  <option value="publication">Publication</option>
-				  <option value="awards">Awards & Honours</option>
-				  <option value="undergradprojects">Undergraduation Projects</option>
-				  <option value="skills">My Skills</option>
+				  <option value="undergradprojects">Under-graduation Projects</option>
+				  <option value="awards">Awards & Honours</option>				  				  
 				</select>
             </p>
             
