--- a/template/editWork.html
+++ b/template/editWork.html
@@ -12,6 +12,10 @@
             	<input type="text" name="title" value="{{work.title}}"/>
             </p>
             <div class="clearAll"></div>
+			<p>Category :
+            	<input type="text" name="category" value="{{work.category}}"/>
+            </p> 
+            <div class="clearAll"></div> 
             <p>Publish :
             	<input type="text" name="publish" value="{{work.publish}}"/>
             </p> 
