--- a/template/index.html
+++ b/template/index.html
@@ -61,12 +61,13 @@
                 <nav id="options" class="work-nav">
                     <ul id="filters" class="option-set" data-option-key="filter">
                     	<li class="type-work">Select to Filter</li>
-                        <li><a href="#filter" data-option-value="*" class="selected">All</a></li>
-                        <li><a href="#filter" data-option-value=".workexperience" >Work Experience</a></li>
-                        <li><a href="#filter" data-option-value=".personalprojects">Projects Done</a></li>                        
-                        <li><a href="#filter" data-option-value=".awards">Awards & Honours</a></li>                                               
-                        <!-- <li><a href="#filter" data-option-value=".skills">My Skills</a></li>  --> 
-                                              
+                        <li><a href="#filter" data-option-value="*" >All</a></li>
+                        <li><a href="#filter" data-option-value=".workexperience" class="selected">Work Experience</a></li>
+						<!--<li><a href="#filter" data-option-value=".skills">Programming Skills</a></li>-->
+                        <li><a href="#filter" data-option-value=".personalprojects">Applications Developed</a></li> 
+						<li><a href="#filter" data-option-value=".publication">Publication</a></li> 
+						<li><a href="#filter" data-option-value=".undergradprojects">Under-graduation Activities</a></li>
+                        <li><a href="#filter" data-option-value=".awards">Awards & Honours</a></li>
                     </ul>
                 </nav>
                 <!-- End Filter -->
