comment personal project

--- a/template/index.html
+++ b/template/index.html
@@ -64,7 +64,7 @@
                         <li><a href="#filter" data-option-value="*" class="selected">All</a></li>
                         <li><a href="#filter" data-option-value=".workexperience" >Work Experience</a></li>
 						<!--<li><a href="#filter" data-option-value=".skills">Programming Skills</a></li>-->
-                        <li><a href="#filter" data-option-value=".personalprojects">Applications Developed</a></li> 
+                        <!--<li><a href="#filter" data-option-value=".personalprojects">Applications Developed</a></li>--> 
 						<li><a href="#filter" data-option-value=".publication">Publication</a></li> 
 						<li><a href="#filter" data-option-value=".undergradprojects">Under-graduation Activities</a></li>
                         <li><a href="#filter" data-option-value=".awards">Awards & Honours</a></li>
