--- a/template/index.html
+++ b/template/index.html
@@ -19,7 +19,7 @@
 <!-- End of Splash Screen -->
 
 <!-- Homepage Slider -->
-<div id="home-slider">	
+ <div id="home-slider">	
     <div class="overlay"></div>
 
     <div class="slider-text">
@@ -251,11 +251,11 @@
 </script>
 <script type="text/javascript">
 	var homePageSliderData = [{image : 'tempasset/homeslide/alltiles.jpg', 
-							   title : '<div class="slide-content"></div>', 
+							   title : '<div class="slide-content">Scroll to see some of these projects</div>', 
 							   thumb : '', 
 							   url : ''},
                               {image : 'tempasset/homeslide/xspowerrobots.jpg', 
-							   title : '<div class="slide-content"></div>', 
+							   title : '<div class="slide-content">Robots build during under graduation days</div>', 
 							   thumb : '', 
 							   url : ''}                                
                       ];
