--- a/template/sharedMaster.html
+++ b/template/sharedMaster.html
@@ -85,7 +85,7 @@
         <nav id="menu">
         	<ul id="menu-nav">
             	<li class="current"><a href="#home-slider">Home</a></li>
-                <li><a href="#work">My Work</a></li>
+                <li><a href="#work">Profile</a></li>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#contact">Contact</a></li>
 				<li><a href="tempasset/doc/SubhasisDutta-Resume.pdf" class="external" target="_blank">Resume</a></li> 
