heading color change

--- a/static/_include/css/main.css
+++ b/static/_include/css/main.css
@@ -328,7 +328,7 @@ h3.spec {
 
 #home-slider .slide-content {
 	font-size: 55px;
-	color: #FFF;
+	color: #DE5E60;
 	letter-spacing: 0px;
 	text-transform: capitalize;
 	font-weight: bold;;	
