--- a/template/index_old.html
+++ b/template/index_old.html
@@ -104,7 +104,7 @@
     <div class="row">
         <div class="span12">
             <div class="title-page">
-                <h2 class="title">About Me</h2>                
+                <h2 class="title">About Me</h2>             
             </div>
         </div>
     </div>
@@ -128,53 +128,6 @@
             
         </div>
         <!-- End Profile -->
-        
-        <!-- Start Profile 
-    	<div class="span4 profile">
-        	<div class="image-wrap">
-                <div class="hover-wrap">
-                    <span class="overlay-img"></span>
-                    <span class="overlay-text-thumb">Creative Director</span>
-                </div>
-                <img src="_include/img/profile/profile-02.jpg" alt="Jane Helf">
-            </div>
-            <h3 class="profile-name">Jane Helf</h3>
-            <p class="profile-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac augue at erat <a href="#">hendrerit dictum</a>. 
-            Praesent porta, purus eget sagittis imperdiet, nulla mi ullamcorper metus, id hendrerit metus diam vitae est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-            	
-            <div class="social">
-            	<ul class="social-icons">
-                	<li><a href="#"><i class="font-icon-social-twitter"></i></a></li>
-                    <li><a href="#"><i class="font-icon-social-email"></i></a></li>
-                </ul>
-            </div>
-        </div>-->
-        <!-- End Profile -->
-        
-        <!-- Start Profile 
-    	<div class="span4 profile">
-        	<div class="image-wrap">
-                <div class="hover-wrap">
-                    <span class="overlay-img"></span>
-                    <span class="overlay-text-thumb">Lead Designer</span>
-                </div>
-                <img src="_include/img/profile/profile-03.jpg" alt="Joshua Insanus">
-            </div>
-            <h3 class="profile-name">Joshua Insanus</h3>
-            <p class="profile-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac augue at erat <a href="#">hendrerit dictum</a>. 
-            Praesent porta, purus eget sagittis imperdiet, nulla mi ullamcorper metus, id hendrerit metus diam vitae est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-            	
-            <div class="social">
-            	<ul class="social-icons">
-                	<li><a href="#"><i class="font-icon-social-twitter"></i></a></li>
-                    <li><a href="#"><i class="font-icon-social-linkedin"></i></a></li>
-                    <li><a href="#"><i class="font-icon-social-google-plus"></i></a></li>
-                    <li><a href="#"><i class="font-icon-social-vimeo"></i></a></li>
-                </ul>
-            </div>
-        </div>-->
-        <!-- End Profile -->
-        
     </div>
     <!-- End People -->
 </div>
@@ -208,7 +161,7 @@
                 	<input id="contact_email" type="text" placeholder="Email Address" value="" name="email" />
                 </p>
                 <p class="contact-message">
-                	<textarea id="contact_message" placeholder="Your Message" name="message" rows="15" cols="40"></textarea>
+                	<textarea id="contact_message" placeholder="Your Message" name="message" rows="6" cols="40"></textarea>
                 </p>
                 <p class="contact-submit">
                 	<a id="contact-submit" class="submit" href="#">Post Message</a>
@@ -251,11 +204,11 @@
 </script>
 <script type="text/javascript">
 	var homePageSliderData = [{image : 'tempasset/homeslide/alltiles.jpg', 
-							   title : '<div class="slide-content"></div>', 
+							   title : '<div class="slide-content"><a href="#work">Scroll to see some of these projects</a></div>',
 							   thumb : '', 
 							   url : ''},
                               {image : 'tempasset/homeslide/xspowerrobots.jpg', 
-							   title : '<div class="slide-content"></div>', 
+							   title : '<div class="slide-content"><a href="#work">Robots build during under graduation days</a></div>',
 							   thumb : '', 
 							   url : ''}                                
                       ];
