--- a/template/sharedMaster.html
+++ b/template/sharedMaster.html
@@ -79,13 +79,14 @@
     	<a id="mobile-nav" class="menu-nav" href="#menu-nav"></a>
         
         <div id="logo">
-        	<a id="goUp" href="/" title="Subhasis Dutta"> Subhasis Dutta </a>
+        	<a id="goUp" href="/" title="Subhasis Notebook"> Subhasis Notebook </a>
         </div>
         
         <nav id="menu">
         	<ul id="menu-nav">
             	<li class="current"><a href="#home-slider">Home</a></li>
-                <li><a href="#work">My Work</a></li>
+            	<!-- <li><a href="/note" class="external">Notes</a></li> -->
+                <li><a href="#work">Profile</a></li>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#contact">Contact</a></li>
 				<li><a href="tempasset/doc/SubhasisDutta-Resume.pdf" class="external" target="_blank">Resume</a></li> 
@@ -142,9 +143,9 @@
 
 <!-- Footer -->
 <footer>
-	<p class="credits">&copy;2014 Created By <a href="http://www.subhasisdutta.com/" title="Subhasis Dutta | Developer">Subhasis Dutta</a>. Web Template designed by <a href="http://www.alessioatzeni.com/" title="Alessio Atzeni | Web Designer &amp; Front-end Developer">Alessio Atzeni</a></p>
+	<p class="credits">&copy;2015  Created By <a href="http://subhasisdutta.com/" title="Subhasis Dutta | Developer">Subhasis Dutta</a>.      Web Template designed by <a href="http://www.alessioatzeni.com/" title="Alessio Atzeni | Web Designer &amp; Front-end Developer">Alessio Atzeni</a></p>
 </footer>
-<!-- End Footer -->
+<!--  End Footer -->
 
 <!-- Back To Top -->
 <a id="back-to-top" href="#">
