--- a/static/_include/css/main.css
+++ b/static/_include/css/main.css
@@ -24,17 +24,17 @@ html, hmtl a{
 }
 
 body{
-	background:#2F3238;
-	color:#7F8289;
+	background:#FFF;
+	color:rgb(51, 51, 51);
 	font-weight:300;
 	font-size:16px;
-	font-family: 'Titillium Web', sans-serif;
+	font-family: "Open Sans", Calibri, Candara, Arial, sans-serif;/*'Titillium Web', sans-serif;*/
 	line-height:28px;
 }
 
 
 a{
-	color:#DE5E60;
+	color:#007fff;
 	text-decoration: none;
 	cursor: pointer;
 	
@@ -104,7 +104,7 @@ hr {
 }
 
 .color-text {
-    color: #DE5E60;
+    color: #007fff;
 }
 
 .through{
@@ -113,7 +113,7 @@ hr {
 
 input, button, select, textarea {
 	font-weight: 300;
-	font-family: 'Titillium Web', sans-serif;
+	font-family: "Open Sans", Calibri, Candara, Arial, sans-serif;
 	outline: 0;
 }
 
@@ -203,9 +203,9 @@ h4,
 h5,
 h6{
 	margin:0 0 20px 0;
-	color:#FFFFFF;
+	color:rgb(51, 51, 51);
 	font-weight:300;
-	font-family: 'Titillium Web', sans-serif;
+	font-family: "Open Sans", Calibri, Candara, Arial, sans-serif;/*'Titillium Web', sans-serif;*/
 	line-height:1.5em;
 }
 
@@ -301,7 +301,7 @@ h3.spec {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: #26292E;
+	background: #FFFFFF;
 	opacity: 0.1;
 	filter: alpha(opacity=10);
 	z-index: 0;
@@ -309,37 +309,46 @@ h3.spec {
 
 #home-slider .slider-text {
 	position: absolute;
-	left: 50%;
-	top: 50%;
+	right: 0%;
+  	bottom: 25%;
 	margin: -150px 0 0 -585px;
-	width: 1170px;
-	height: 250px;
+	width: 80%;
+  	height: 10%;
 	text-align: center;
-	z-index: 2;	
+	z-index: 2;		
+    opacity: 0.6;
+    filter: alpha(opacity=60); /* For IE8 and earlier */
 }
 
 #home-slider #slidecaption {
 	width: 100%;
-	line-height: 12;
+	line-height: 2;
 	margin: 0;
-	text-align: right;
-	text-shadow: none;	
+	text-align: right;	
+	text-shadow: #000 2px 2px 4px;
 }
 
 #home-slider .slide-content {
-	font-size: 55px;
-	color: #FFF;
+	font-size: 30px;
+	color: #fff;	
 	letter-spacing: 0px;
 	text-transform: capitalize;
-	font-weight: bold;;	
+	font-weight: bold;
+	padding-right:10%;
 }
-
+#home-slider .slide-content a{
+	color: #fff;
+}
+#home-slider .slide-content a:hover{
+	color: #0066cc;
+	
+}
 #home-slider .control-nav {
 	position: absolute;
 	width: 100%;
-	background: #2F3238;
+	/*background: #2F3238;*/
 	height: 50px;
-	bottom: 0px;
+	bottom: 10%;
 	z-index: 2;
 }
 
@@ -365,7 +374,7 @@ h3.spec {
 }
 
 #home-slider #nextslide {
-	margin-left: -3px;	
+	margin-left: -4px;	
 }
 
 #home-slider #nextsection {
@@ -374,7 +383,7 @@ h3.spec {
 
 #home-slider #nextslide:hover,
 #home-slider #prevslide:hover {
-	background-color:#DE5E60;
+	background-color:#007fff;
 }
 
 #home-slider #nextslide i,
@@ -432,7 +441,7 @@ h3.spec {
 
 #home-slider ul#slide-list li.current-slide a,
 #home-slider ul#slide-list li.current-slide a:hover {
-	background-color:#DE5E60;
+	background-color:#007fff;
 }
 
 #home-slider #nextsection {
@@ -450,7 +459,7 @@ h3.spec {
 }
 
 #home-slider #nextsection:hover {
-	background-color:#DE5E60;
+	background-color:#007fff;
 }
 
 #home-slider #nextsection i {
@@ -480,8 +489,9 @@ header {
 header .sticky-nav {
 	position: relative;
 	width: 100%;
-	height: 60px;
-	background: #26292E;
+	height: 50px;
+	background: #007fff;/*#26292E;*/
+	border-color: #0066cc;
 	z-index: 1001;
 	
 	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
@@ -499,20 +509,20 @@ header .sticky-nav.stuck {
 header #logo {
 	color: #FFFFFF;
 	float: left;
-	padding: 15px 0;
-	margin-left: 20px;
+	padding: 10px 0;
+	margin-left: 5%;/*20px;*/
 }
 
-header #logo a {
-	/*background: url(../img/logo.png) no-repeat;*/
-	width: 96px;
-	height: 30px;
+header #logo a {	
+	/*width: 96px;
+	height: 30px;*/
 	text-indent: -9999px;
 	/*display: block;*/
 	opacity: 1;
 	filter: alpha(opacity=100);
 	color:#FFFFFF;
-	
+	font-size:22px;
+	font-weight:400;
 	-webkit-transition: opacity 0.25s ease-in-out 0s;	
 	   -moz-transition: opacity 0.25s ease-in-out 0s;
 		 -o-transition: opacity 0.25s ease-in-out 0s;
@@ -537,7 +547,9 @@ nav#menu #menu-nav {
 nav#menu #menu-nav li {
 	list-style: none;
 	display: inline-block;
-	margin-left: 50px;	
+	margin-left:-2px;
+	margin-right: -2px;
+	
 }
 
 nav#menu #menu-nav li:first-child {
@@ -546,16 +558,19 @@ nav#menu #menu-nav li:first-child {
 
 nav#menu #menu-nav li a {
 	color: #FFFFFF;
-	font-size: 16px;
-	font-weight: 300;
-	line-height: 60px;
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 50px;
 	display: block;
-	text-transform: uppercase;
+	padding-left: 25px;
+	padding-right: 25px;
+	/*text-transform: uppercase;*/
 }
 
 nav#menu #menu-nav li.current a,
 nav#menu #menu-nav li a:hover {
-	color: #DE5E60;
+	color: #ffffff;
+  	background-color: #0066cc;
 }
 
 
@@ -630,16 +645,16 @@ nav#menu #menu-nav li a:hover {
 ================================================== */
 
 .page {
-	background: #2F3238;
-	padding: 100px 0;
+	background: #EEEEFF;
+	padding: 10px 0;
 	padding-top:40px;
 	position: relative;
 	z-index: 99;
 }
 
 .page-alternate {
-	background: #26292E;
-	padding: 100px 0;
+	background: #FFFFFF;
+	padding: 50px 0;
 	position: relative;
 	z-index: 99;
 }
@@ -665,9 +680,9 @@ nav#menu #menu-nav li a:hover {
 ================================================== */
 
 .type-work {
-	color: #FFFFFF;
+	color: rgb(51, 51, 51);
 	font-size: 24px;
-	font-weight: 300;
+	font-weight: bold;
 	margin-bottom: 30px;
 	line-height: 1em;
 	text-transform: uppercase;
@@ -685,17 +700,18 @@ nav#menu #menu-nav li a:hover {
 }
 
 .work-nav #filters li a {
-	color: #7F8289;
+	color: rgb(51, 51, 51);;
 	font-size: 16px;
+	font-weight:bold;
 	display: block;	
 }
 
 .work-nav #filters li a:hover {
-	color: #FFFFFF;
+	color: #fff;
 }
 
 .work-nav #filters li a.selected {
-	color: #DE5E60;
+	color: #007fff;
 }
 
 #thumbs {
@@ -705,6 +721,7 @@ nav#menu #menu-nav li a:hover {
 
 #thumbs li {
 	list-style-type: none;
+	box-shadow: #000 2px 2px 4px;
 }
 
 .item-thumbs {
@@ -723,7 +740,7 @@ nav#menu #menu-nav li a:hover {
 	display: block;
 	width: 100%;
 	height: 100%;
-	
+	/*
 	opacity: 0;
 	filter: alpha(opacity=0);
 	
@@ -736,9 +753,9 @@ nav#menu #menu-nav li a:hover {
 	   -moz-transform: rotateY(180deg) scale(0.5,0.5);
 		-ms-transform: rotateY(180deg) scale(0.5,0.5);
 		 -o-transform: rotateY(180deg) scale(0.5,0.5);
-			transform: rotateY(180deg) scale(0.5,0.5);	
+			transform: rotateY(180deg) scale(0.5,0.5);*/	
 }
-
+/*
 .item-thumbs:hover .hover-wrap,
 .item-thumbs.active .hover-wrap {
 	opacity: 1;
@@ -749,29 +766,29 @@ nav#menu #menu-nav li a:hover {
 		-ms-transform: rotateY(0deg) scale(1,1);
 		 -o-transform: rotateY(0deg) scale(1,1);
 		    transform: rotateY(0deg) scale(1,1);
-}
+}*/
 
 .item-thumbs .hover-wrap .overlay-img {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: #DE5E60;
+	/*background: #007fff;
 	
 	opacity: 0.80;
-	filter: alpha(opacity=80);
+	filter: alpha(opacity=80);*/
 }
 
 .item-thumbs .hover-wrap .overlay-img-thumb {
 	position: absolute;
-	top: 50%;
-	left: 50%;
+	top: 0%;
+	left: 1%;
 	margin: -16px 0 0 -16px;
 	color: #FFFFFF;
-	font-size: 32px;
+	font-size: 400px;
 	line-height: 1em;
 	
-	opacity: 1;
-	filter: alpha(opacity=100);
+	opacity: 0;
+	filter: alpha(opacity=0);	
 }
 
 
@@ -835,7 +852,7 @@ nav#menu #menu-nav li a:hover {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: #DE5E60;
+	background: #007fff;
 	
 	opacity: 0.80;
 	filter: alpha(opacity=80);
@@ -898,9 +915,9 @@ nav#menu #menu-nav li a:hover {
 ================================================== */
 
 .contact-details h3 {
-	color: #FFFFFF;
+	color: rgb(51, 51, 51);
     font-size: 24px;
-    font-weight: 300;
+    font-weight: bold;
     margin-bottom: 30px;
 	line-height: 1em;
     text-transform: uppercase;
@@ -912,8 +929,7 @@ nav#menu #menu-nav li a:hover {
 	list-style: none;	
 }
 
-.contact-details ul li {
-	margin: 0 0 20px;
+.contact-details ul li {	
 	line-height: 28px;
 	padding: 0;	
 }
@@ -937,8 +953,8 @@ nav#menu #menu-nav li a:hover {
 	-moz-box-shadow: none;
 	box-shadow: none;
 	
-	background: #26292E;
-    color: #FFFFFF;
+	background: #FFFFFF;
+    color: rgb(51, 51, 51);
     font-size: 16px;
     height: auto;
     padding: 15px;
@@ -964,7 +980,7 @@ nav#menu #menu-nav li a:hover {
 
 #contact-form .submit {
     background: #3C3F45;
-    color: #23262C;
+    color: #FFF;
     cursor: pointer;
     display: inline-block;
     font-size: 18px;
@@ -982,13 +998,13 @@ nav#menu #menu-nav li a:hover {
 }
 
 #contact-form .submit:hover {
-    background: #DE5E60;
-    color: #FFFFFF;
+    background: #007fff;
+    color: #fff;
 }
 
 #response {
 	margin-top: 20px;
-	color: #FFFFFF;
+	color: rgb(51, 51, 51);
 }
 
 
@@ -1065,7 +1081,7 @@ nav#menu #menu-nav li a:hover {
 	width: 70px;
 	height: 70px;
 
-	background: #26292E;
+	
 	
 	-webkit-transition: all 400ms ease-out 0s;	
 	   -moz-transition: all 400ms ease-out 0s;
@@ -1103,7 +1119,7 @@ nav#menu #menu-nav li a:hover {
 
 #social ul li:hover a,
 #social ul li.active a {
-	background-color: #DE5E60;	
+	background-color: #007fff;	
 	
 	-webkit-transform: rotateY(0deg);
 	   -moz-transform: rotateY(0deg);
@@ -1168,7 +1184,7 @@ footer .credits {
 }
 
 #back-to-top:hover {
-	background-color:#DE5E60;
+	background-color:#007fff;
 }
 
 #back-to-top i {
@@ -1192,7 +1208,7 @@ footer .credits {
 
 #jpreOverlay,
 #jSplash {
-	background-color: #2F3238;
+	background-color: #FFF;
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -1244,7 +1260,7 @@ footer .credits {
 	margin: -50px 0 0 -50px;
 	width: 100px;
 	height: 100px;
-	background: #DE5E60;
+	background: #007fff;
 	-webkit-border-radius: 999px;
 	-moz-border-radius: 999px;
 	border-radius: 999px;
