--- a/template/sharedMaster.html
+++ b/template/sharedMaster.html
@@ -25,7 +25,7 @@
 <link href="_include/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Main Style -->
-<link href="_include/css/main.css" rel="stylesheet">
+<link href="/css/main.css" rel="stylesheet">
 
 <!-- Supersized -->
 <link href="_include/css/supersized.css" rel="stylesheet">
@@ -79,13 +79,13 @@
     	<a id="mobile-nav" class="menu-nav" href="#menu-nav"></a>
         
         <div id="logo">
-        	<a id="goUp" href="/" title="Subhasis Notebook"> Subhasis Notebook </a>
+        	<a id="goUp" href="/" title="Subhasis Notebook"> Subhasis Dutta </a>
         </div>
         
         <nav id="menu">
         	<ul id="menu-nav">
             	<li class="current"><a href="#home-slider">Home</a></li>
-            	<!-- <li><a href="/note" class="external">Notes</a></li> -->
+            	<li><a href="/note" class="external">Notes</a></li>
                 <li><a href="#work">Profile</a></li>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -154,8 +154,7 @@
 <!-- End Back to Top -->
 
 <!-- Js -->
-<script src="_include/jquery-1.7.min.js"></script>
-<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> --> <!-- jQuery Core -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="_include/js/bootstrap.min.js"></script> <!-- Bootstrap -->
 <script src="_include/js/supersized.3.2.7.min.js"></script> <!-- Slider -->
 <script src="_include/js/waypoints.js"></script> <!-- WayPoints -->
