--- a/template/index.html
+++ b/template/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<!-- Bootstrap the angular app after the Google Java Script libraries are loaded. -->
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Subhasis Notebook</title>
+    <title>Subhasis Dutta</title>
 
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-cosmo.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link href="_include/css/fonts.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/offcanvas.css">
     <link rel="shortcut icon" href="/img/favicon.ico">
     <meta property="og:title" content="Subhasis Notebook">
@@ -33,7 +33,7 @@
         	angular.bootstrap(document, ['conferenceApp']);
         };
     </script>
-    <script src="//apis.google.com/js/client:plusone.js?onload=init"></script>
+    <!-- <script src="//apis.google.com/js/client:plusone.js?onload=init"></script> -->
 </head>
 
 <!-- Restore the credential from cookie if stored by calling initSignInButton() -->
@@ -78,14 +78,53 @@
     <ng-view></ng-view>
 </div>
 
+<!-- Socialize -->
+<div id="social-area" class="page">
+	<div class="container">
+    	<div class="row">
+            <div class="span12">
+                <nav id="social">
+                    <ul>
+                    	<li><a href="https://github.com/SubhasisDutta" title="Follow Me on Github" target="_blank"><span class="font-icon-social-github"></span></a></li>
+                        <li><a href="https://twitter.com/Subhasis_Dutta_" title="Follow Me on Twitter" target="_blank"><span class="font-icon-social-twitter"></span></a></li>                                                                        
+                        <li><a href="https://www.facebook.com/dutta.subhasis" title="Connect With Me on Facebook" target="_blank"><span class="font-icon-social-facebook"></span></a></li>
+                        <li><a href="https://plus.google.com/+SubhasisDuttaGoogle/" title="Connect With Me on Google Plus" target="_blank"><span class="font-icon-social-google-plus"></span></a></li>
+                        <li><a href="http://in.linkedin.com/pub/subhasis-dutta/45/9b5/702" title="Connect With Me on LinkedIn" target="_blank"><span class="font-icon-social-linkedin"></span></a></li>                                               
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Socialize -->
+
+<!-- Footer -->
+<footer>
+	<p class="credits">&copy;2015 &nbsp;&nbsp; <a href="http://subhasisdutta.com/" title="Subhasis Dutta | Developer">Subhasis Dutta</a>.</p>
+</footer>
+<!--  End Footer -->
+
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="/js/app.js"></script>
 <script src="/js/controllers.js"></script>
 
-<!-- Put the signInButton to invoke the gapi.signin.render to restore the credential if stored in cookie. -->
-<span id="signInButton" style="display: none" disabled="true"></span>
+<!-- Analytics -->
+<script type="text/javascript">
+
+  /*var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'Insert Your Code']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();*/
+
+</script>
+<!-- End Analytics -->
 
 </body>
 </html>
