--- a/template/index.html
+++ b/template/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-cosmo.css">
+    <link rel="stylesheet" href="/css/jquery.reject.css">
     <link rel="stylesheet" href="/css/main.css">
     <link href="_include/css/fonts.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/offcanvas.css">
@@ -17,28 +18,17 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="Subhasis Notebook is web app that documents some of the new technologies to work in.">    
     <meta property="og:site_name" content="An web app designed by Subhasis Dutta, powered by Google App Engine.">
-
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.js"></script>
-    <script>
-        /**
-         * Initializes the Google API JavaScript client. Bootstrap the angular module after loading the Google libraries
-         * so that Google JavaScript library ready in the angular modules.
-         */
-        function init() {
-            /*gapi.client.load('conference', 'v1', null, '//' + window.location.host + '/_ah/api');
-            gapi.client.load('oauth2', 'v2', function () {
-                
-            });*/
-        	angular.bootstrap(document, ['conferenceApp']);
-        };
-    </script>
-    <!-- <script src="//apis.google.com/js/client:plusone.js?onload=init"></script> -->
+	
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.js"></script>
+	
+    
+      
 </head>
 
 <!-- Restore the credential from cookie if stored by calling initSignInButton() -->
-<body ng-controller="RootCtrl" ng-init="initSignInButton()">
-
+<body ng-controller="RootCtrl" >
+<!--[if lte IE 8]><script src="js/ie6/warning.js"></script><script>window.onload=function(){e("js/ie6/")}</script><![endif]-->
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -48,24 +38,51 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Subhasis Notebook</a>
+            <a class="navbar-brand" href="/">Subhasis Dutta</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li ng-class="{ active: isActive('/conference')}" ng-click="collapseNavbar()"><a href="#/conference">Show Conferences</a></li>
-                <li ng-class="{ active: isActive('/conference/create')}" ng-click="collapseNavbar()"><a href="#/conference/create" >Create Conferences</a></li>
+                <li ng-class="{ active: isActive('/')}" ng-click="collapseNavbar()"><a href="#/">Home</a></li>
+                <!-- <li ng-class="{ active: isActive('/conference/create')}" ng-click="collapseNavbar()"><a href="#/conference/create" >Create Conferences</a></li>
                 <li ng-class="{ active: isActive('/profile')}" ng-click="collapseNavbar()"><a href="#/profile">My Profile</a></li>
+                 -->
+                 
+                <li class="dropdown">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Category <span class="caret"></span></a>
+		          <ul class="dropdown-menu" role="menu">
+		            <li><a href="#/category/cloudcomputing">Cloud Computing</a></li>
+		            <li><a href="#/category/artificialintelligence">Artificial Intelligence</a></li>
+		            <li><a href="#/category/webtechnology">Web Technology</a></li>
+		            <li><a href="#/category/bigdata">Big Data</a></li>
+		            <li><a href="#/category/algorithms">Algorithms</a></li>
+		            <li><a href="#/category/robotics">Robotics</a></li>
+		            <li class="divider"></li>
+		            <li><a href="#/category/gitrepos">Git Repositories</a></li>
+		            <li class="divider"></li>
+		            <li><a href="#/category/download">Download Resource</a></li>
+		          </ul>
+		        </li> 
                 <li class="nav-divider"></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li id="signInLink" ng-hide="getSignedInState()"><a ng-click="signIn(); collapseNavbar()">Google+ SignIn</a></li>
-                <li id="signOutLink" ng-show="getSignedInState()"><a ng-click="signOut(); collapseNavbar()">Log out</a></li>
+            </ul>  
+             <!--  <form class="navbar-form navbar-right" role="search" action="#/search" method="get">
+        		<div class="form-group">
+          		<input type="text" class="form-control" placeholder="Search">
+        		</div>        		
+      		</form>   -->        
+            <ul class="nav navbar-nav navbar-right">               
+                <li id="searchBox" >
+                	<form action="#/search" method="get" id="searchFormBox">
+  						<fieldset role="search">    						
+    						<input class="search" type="text" name="q" results="0" placeholder="Search">
+  						</fieldset>
+  					</form>
+                </li>                
             </ul>
         </div>
     </div>
 </div>
 
-<div class="container">
+<div class="container" id="contentContainer">
     <div class="row">
         <div class="col-lg-12">
             <div id="rootMessages" class="alert alert-{{alertStatus}}" ng-show="rootMessages">
@@ -107,8 +124,26 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+<script src="/js/jReject.js"></script>
 <script src="/js/app.js"></script>
 <script src="/js/controllers.js"></script>
+
+ <script>  	   
+		$.reject({  
+		       reject: {	        	
+		            msie: 9, // Microsoft Internet Explorer	8 and less
+		       },
+		       imagePath: '/img/browsers/'	        
+		});
+			    
+        function init() {           
+        	angular.bootstrap(document, ['notebookApp']);
+        };
+        angular.element(document).ready(function () {
+        	init();
+        });
+    </script> 
 
 <!-- Analytics -->
 <script type="text/javascript">
