--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -651,12 +651,12 @@ nav#menu #menu-nav li a:hover {
 
 .title-page {
 	text-align: center;
-	margin-bottom: 15px;	
+	/*margin-bottom: 15px;*/	
 }
 
 .title-page .title {
 	font-size: 48px;
-	margin: 0 0 10px 0
+	margin: 0 0 0px 0
 }
 
 .title-page .title-description {
@@ -796,13 +796,12 @@ nav#menu #menu-nav li a:hover {
 
 .image-wrap {
 	position: relative;
-	overflow: hidden;
-	margin-bottom: 25px;
+	overflow: hidden;	
 	cursor: pointer;
 }
 
 .image-wrap img {
-	width: 100%;	
+	width: 85%;	
 }
 
 .image-wrap  .hover-wrap {
