change contact and footer

--- a/template/sharedMaster.html
+++ b/template/sharedMaster.html
@@ -142,7 +142,7 @@
 
 <!-- Footer -->
 <footer>
-	<p class="credits">&copy;2015  Created By <a href="http://subhasisdutta.com/" title="Subhasis Dutta | Developer">Subhasis Dutta</a>.      Web Template designed by <a href="http://www.alessioatzeni.com/" title="Alessio Atzeni | Web Designer &amp; Front-end Developer">Alessio Atzeni</a></p>
+	<p class="credits">&copy;2015  Created By <a href="http://subhasisdutta.com/" title="Subhasis Dutta | Developer">Subhasis Dutta</a>.     Powered by <a href="https://cloud.google.com/appengine/" title="Google App Engine" target="_blank">Google App Engine</a></p>
 </footer>
 <!--  End Footer -->
 
