--- a/template/index_old.html
+++ b/template/index_old.html
@@ -116,14 +116,15 @@
         <!-- Start Profile -->
     	<div class="span4 profile">
         	<div class="image-wrap">                
-                <img src="tempasset/aboutme/profile.JPG" alt="Subhasis Dutta">
+                <img src="images/profile.jpg" alt="Subhasis Dutta">
             </div>
-            <h3 class="profile-name">Subhasis Dutta</h3>
-            <p class="profile-description">Hi, I am a Software Engineer currently working at GE Healthcare, with an experience of more than 4 years. 
-            I work on developing web applications using wide range of technologies. I have developed web application that can server more
-             than million request per month to prototype application using new open source technologies. Before joining the IT
-             industry, I had co-founded a start-up <a href="http://xsrobotics.com/products/" target="_blank">XSROBOTICS</a> with an objective to develop products and provide services for the education
-              and hobby robotics market. </p>
+            <p class="profile-description">
+            I am a Computer Science graduate student at University of Texas at Dallas. I am currently working on a projects involving Kinect for controlling haptic devices, Using Cassandra for storing massive amount of data and a few others. This website is a collection of my professional, academic and hobby projects.</br>
+			I am passionate about Cloud Computing, Internet of Things, Robotics, Augmented Reality, Building scalable web applications and above all amalgamation of these technologies to design aesthetic application.</br>
+			Before joining grad school, I was involved in software development for 5 years at General Electric (GE) Healthcare, International Business Machine (IBM) and Infosys.  Apart from this I had collaborated with start-ups in Silicon Valley like Serendio and Infinilytics on building Big data applications. During my under graduation, I had co-founded a start-up XSROBOTICS with an objective to develop robot kits and provide educational training to students.</br>
+			I love learning new things and while I am not working I like meeting people and have a good time.
+            </p>
+
             	
             
         </div>
