--- a/template/index.html
+++ b/template/index.html
@@ -72,13 +72,17 @@
 		            <li><a href="#/category/download">Download Resource</a></li>
 		          </ul>
 		        </li> 
+		        <li ng-class="{ active: isActive('/profile')}" ng-click="collapseNavbar()"><a href="#/profile">Profile</a></li>
+		        <li ng-class="{ active: isActive('/aboutme')}" ng-click="collapseNavbar()"><a href="#/aboutme">About Me</a></li>
+		        <li ng-class="{ active: isActive('/contact')}" ng-click="collapseNavbar()"><a href="#/contact">Contact</a></li>
                 <li class="nav-divider"></li>
             </ul>  
              <!--  <form class="navbar-form navbar-right" role="search" action="#/search" method="get">
         		<div class="form-group">
           		<input type="text" class="form-control" placeholder="Search">
         		</div>        		
-      		</form>   -->        
+      		</form>   -->   
+      		<!--    
             <ul class="nav navbar-nav navbar-right">               
                 <li id="searchBox" >
                 	<form action="#/search" method="get" id="searchFormBox">
@@ -87,7 +91,7 @@
   						</fieldset>
   					</form>
                 </li>                
-            </ul>
+            </ul> -->  
         </div>
     </div>
 </div>
@@ -127,7 +131,8 @@
 
 <!-- Footer -->
 <footer>
-	<p class="credits">&copy;2015 &nbsp;&nbsp;Developed and Maintained By &nbsp; <a href="http://subhasisdutta.com/" title="Subhasis Dutta | Developer">Subhasis Dutta</a>.</p>
+	<p class="credits">&copy;2015 &nbsp;&nbsp;Developed By &nbsp;<a href="http://subhasisdutta.com/" title="Subhasis Dutta | Developer">Subhasis Dutta</a>. Powered by <a href="https://cloud.google.com/appengine/" title="Google App Engine" target="_blank">Google App Engine</a>
+	</p>
 </footer>
 
 <!--  End Footer -->
